k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traveltrack-ingress
spec:
  rules:
  - host: traveltrack.local
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 5000
      - path: /trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 5001
      - path: /expenses
        pathType: Prefix
        backend:
          service:
            name: expenses-service
            port:
              number: 5002
      - path: /categories
        pathType: Prefix
        backend:
          service:
            name: categories-service
            port:
              number: 5003
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 5004
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: frontend
      #       port:
      #         number: 80
